<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/message_box">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/message_user"
            android:textStyle="normal|bold" />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/message_user"
            android:layout_alignParentEnd="true"
            android:id="@+id/message_time" />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message_user"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:id="@+id/message_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

    <ImageView
            android:id="@+id/message_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mountain_image"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/message_text"
            android:visibility="visible" />
</RelativeLayout>