...
                android:layout_margin="16dp"
                android:text="@string/event_title"
                android:textSize="20sp"
                android:textStyle="bold" />

        <ImageButton
                android:id="@+id/event_chat_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="Chat"
                android:src="@drawable/message" />

...
                        android:layout_margin="10dp"
                        android:text="Restrictions"
                        android:textSize="12sp"
                        android:visibility="gone" />

                <Button
                        android:id="@+id/event_join_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Join"
                        android:textSize="12sp"
                        android:layout_margin="10dp"
...
