<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:viewBindingIgnore="true"
        android:id="@+id/map"
        tools:context=".map.MapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment">

        <ImageButton
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refresh_image"
             />

</fragment>